Fix the visibility of the border of the Featured image block
Fix the visibility of the border of the Featured image block, updates rtl styles.

--- a/src/wp-content/themes/twentynineteen/style-rtl.css
+++ b/src/wp-content/themes/twentynineteen/style-rtl.css
@@ -5480,6 +5480,31 @@ body.page .main-navigation {
   }
 }
 
+.entry .entry-content .wp-block-avatar :where([style*=border-width]),
+.entry .entry-content .wp-block-avatar :where(.has-border-color) {
+  border-style: solid;
+}
+
+.entry .entry-content .wp-block-avatar :where([style*="border-top-width"]),
+.entry .entry-content .wp-block-avatar :where([style*="border-top-color"]) {
+  border-top-style: solid;
+}
+
+.entry .entry-content .wp-block-avatar :where([style*="border-right-width"]),
+.entry .entry-content .wp-block-avatar :where([style*="border-right-color"]) {
+  border-left-style: solid;
+}
+
+.entry .entry-content .wp-block-avatar :where([style*="border-bottom-width"]),
+.entry .entry-content .wp-block-avatar :where([style*="border-bottom-color"]) {
+  border-bottom-style: solid;
+}
+
+.entry .entry-content .wp-block-avatar :where([style*="border-left-width"]),
+.entry .entry-content .wp-block-avatar :where([style*="border-left-color"]) {
+  border-right-style: solid;
+}
+
 .entry .entry-content .wp-block-video video {
   width: 100%;
 }
@@ -5924,6 +5949,31 @@ body.page .main-navigation {
     margin-right: auto;
     margin-left: auto;
   }
+}
+
+.entry .entry-content .wp-block-post-featured-image :where([style*=border-width]),
+.entry .entry-content .wp-block-post-featured-image :where(.has-border-color) {
+  border-style: solid;
+}
+
+.entry .entry-content .wp-block-post-featured-image :where([style*="border-top-width"]),
+.entry .entry-content .wp-block-post-featured-image :where([style*="border-top-color"]) {
+  border-top-style: solid;
+}
+
+.entry .entry-content .wp-block-post-featured-image :where([style*="border-right-width"]),
+.entry .entry-content .wp-block-post-featured-image :where([style*="border-right-color"]) {
+  border-left-style: solid;
+}
+
+.entry .entry-content .wp-block-post-featured-image :where([style*="border-bottom-width"]),
+.entry .entry-content .wp-block-post-featured-image :where([style*="border-bottom-color"]) {
+  border-bottom-style: solid;
+}
+
+.entry .entry-content .wp-block-post-featured-image :where([style*="border-left-width"]),
+.entry .entry-content .wp-block-post-featured-image :where([style*="border-left-color"]) {
+  border-right-style: solid;
 }
 
 .entry .entry-content .wp-block-cover-image,
